write emergency alert histories to sms db
KR government requires to display emergency alert history inside
SMS inbox. Right after emergency alerts being displayed to users,
we will insert message to both cbr db and sms.inbox db, storing
to the same thread.

Bug: 144749813
Test: Manual test with different messager apps
Change-Id: I2d2300f2fb4a9a57a5dff67d2343f9e39275f0da
(cherry picked from commit b13ce2ffef290a7888ee56bf7e0193ba9546f757)
Merged-in: I2d2300f2fb4a9a57a5dff67d2343f9e39275f0da

--- a/res/values/config.xml
+++ b/res/values/config.xml
@@ -53,7 +53,8 @@
     <bool name="mute_by_physical_button">true</bool>
     <!-- Whether enable LED flash when playing alert tones -->
     <bool name="enable_led_flash">false</bool>
-
+    <!-- Whether to save alerts to sms inbox database -->
+    <bool name="enable_write_alerts_to_sms_inbox">false</bool>
     <!-- Section for switch default value -->
     <!-- Master toggle default value -->
     <bool name="master_toggle_enabled_default">true</bool>
