--- a/res/values/overlayable.xml
+++ b/res/values/overlayable.xml
@@ -25,6 +25,8 @@
             <item type="style" name="CellBroadcastAlertTheme"/>
             <item type="style" name="CellBroadcastListActivityTheme"/>
             <item type="style" name="CellBroadcastSettingsTheme"/>
+            <item type="style" name="CellBroadcastListViewTheme"/>
+            <item type="style" name="CellBroadcastListItemTheme"/>
             <!-- END THEME / STYLE -->
 
             <!-- START DIMEN -->
