Make dismissButton overlayable
Bug: 163879473
Test: manual
Change-Id: I669a001cc34c09c5b34efa1ca1be8044dd332705

--- a/res/values/overlayable.xml
+++ b/res/values/overlayable.xml
@@ -27,6 +27,8 @@
             <item type="style" name="CellBroadcastSettingsTheme"/>
             <item type="style" name="CellBroadcastListViewTheme"/>
             <item type="style" name="CellBroadcastListItemTheme"/>
+
+            <item type="id" name="dismissButton"/>
             <!-- END THEME / STYLE -->
 
             <!-- START DIMEN -->
