Show toggle for enable/disable alert speech.
Depending on config show_alert_speech_setting which can be configured
by OEMs.

Test: manually verified usual toggle is shown based on config
Test: manually verified that user toggle works
Bug: 165428124
Change-Id: I22381379ee4e3b56b69a9fd8d08e3a50c2c04feb

--- a/res/values/overlayable.xml
+++ b/res/values/overlayable.xml
@@ -63,6 +63,10 @@
             <item type="string" name="sms_cb_sender_name" />
             <item type="string" name="sms_cb_non_emergency_sender_name" />
             <item type="bool" name="enable_write_alerts_to_sms_inbox" />
+
+            <!-- Allow user to enable/disable audio speech alert (text-to-speech for received
+            messages)-->
+            <item type="bool" name="show_alert_speech_setting" />
         </policy>
         <!-- END VENDOR CUSTOMIZATION -->
 
