support retry data migration
This CL is to address a specific scenario:
1. OEM does not use AOSP default legacyMigration app.
2. OEM have their legacyMigrationContentProvider disabled during bootup
3. there would be a small window that during bootup, emergency alert
arrives before legacyMigrtionContentProvider being active, thus need to
retry migrationi if not done yet.

Bug: 166128868
Test: Manual test
Change-Id: I504ee7847d4629ce92d71ea87bf3de8483c7b7be

--- a/res/values/overlayable.xml
+++ b/res/values/overlayable.xml
@@ -168,6 +168,11 @@
             <item type="string" name="enable_emergency_alerts_message_title" />
             <!-- Preference title for enable presidential threat alerts checkbox. [CHAR LIMIT=40] -->
             <item type="string" name="enable_cmas_presidential_alerts_title" />
+
+            <!-- Whether to retry message history data migration after db creation
+            Note, please only enable this flag when upgrade to R, enabling this
+            flag during OTA might cause history data inserted twice.-->
+            <item type="bool" name="retry_message_history_data_migration" />
         </policy>
         <!-- END VENDOR CUSTOMIZATION -->
 
