--- a/res/values/overlayable.xml
+++ b/res/values/overlayable.xml
@@ -56,7 +56,14 @@
 
             <!-- Some countries like KR requires to display CB messages inside SMS inbox.
             allow customization for sms sender name -->
-            <item type="string" name="sms_cb_sender_name" />
+            <item type="string" name="sms_cb_sender_name_default" />
+            <!-- Value of sms sender display name to be shown in SMS inbox for presidential alerts -->
+            <item type="string" name="sms_cb_sender_name_presidential" />
+            <!-- Value of sms sender display name to be shown in SMS inbox for emergency alerts -->
+            <!-- mapping to emergency_alerts_channels_range_strings channel range -->
+            <item type="string" name="sms_cb_sender_name_emergency" />
+            <!-- Value of sms sender display name to be shown in SMS inbox for public safety alerts -->
+            <item type="string" name="sms_cb_sender_name_public_safety" />
             <item type="string" name="sms_cb_non_emergency_sender_name" />
             <item type="bool" name="enable_write_alerts_to_sms_inbox" />
         </policy>
