--- a/res/layout/cell_broadcast_list_item.xml
+++ b/res/layout/cell_broadcast_list_item.xml
@@ -20,7 +20,7 @@
 <com.android.cellbroadcastreceiver.CellBroadcastListItem xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/CellBroadcastListItemTheme"
+        style="@style/CellBroadcastListItemTheme"
         >
 
     <TextView android:id="@+id/channel"
