emergency alert SMS enhancement
1. provide an option for OEM to always mark emergency alert read in
sms Inbox. This is to address the issue that users expect reading alert
in SMS will automatically reduce the unread alert count in CBR.

2. do not write to sms db for non-system users to avoid insert the same
alert twice.

Bug: 167628889
Bug: 168083560
Test: Manual test
Change-Id: I7b521cf5525890eddaefd9e3d60ac373a418ef87
(cherry picked from commit 44caf4f2230094355490fb5984117ba23224f44a)

--- a/res/values/overlayable.xml
+++ b/res/values/overlayable.xml
@@ -114,6 +114,7 @@
             <!-- Value of sms sender display name to be shown in SMS inbox for public safety alerts -->
             <item type="string" name="sms_cb_sender_name_public_safety" />
             <item type="bool" name="enable_write_alerts_to_sms_inbox" />
+            <item type="bool" name="always_mark_sms_read" />
 
             <!-- Allow user to enable/disable audio speech alert (text-to-speech for received
             messages)-->
