add "always_on" flag for mandatory channels and allow hide main switch
1. add a "alway_on" flag for alerts which don't allow opt-out.
2. remove special handling for presidential alert and replace with
channel flag "always-on".
3. if "always-on" is set, ignore main toggle and individual preference
values.
5. allow hiding main switch: UAE and MTN.

Bug: 168083567
Test: Manual test
Change-Id: I5372a7cad585c945edf12f797897923ac2213919

--- a/res/values/overlayable.xml
+++ b/res/values/overlayable.xml
@@ -115,10 +115,12 @@
             <item type="string" name="sms_cb_sender_name_public_safety" />
             <item type="bool" name="enable_write_alerts_to_sms_inbox" />
             <item type="bool" name="always_mark_sms_read" />
+
             <!-- Whether to retry message history data migration after db creation
            Note, please only enable this flag when upgrade to R, enabling this
            flag during OTA might cause history data inserted twice.-->
             <item type="bool" name="retry_message_history_data_migration" />
+            <item type="bool" name="show_main_switch_settings" />
 
 
             <!-- Temporarily enable string customization to address translation issues. All translation issues will be fixed in S by upstreaming -->
