Revert "Add overlayable ids for OEM customization"
This reverts commit 439e24e514c793819516a57d55ae25669dfd2451.

This CL is only a partial revert -- it removes the IDs and overlayable attrs
which are part of the androidx migration, not the other IDs and attrs.

Reason for revert: stability and not needed by OP on short term, see b/163879473

Change-Id: I55ab6b7f5dbe3367dd34b76a1007239732fdcf64
Merged-In: I55ab6b7f5dbe3367dd34b76a1007239732fdcf64

--- a/res/values/overlayable.xml
+++ b/res/values/overlayable.xml
@@ -28,7 +28,7 @@
             <item type="style" name="CellBroadcastListViewTheme"/>
             <item type="style" name="CellBroadcastListItemTheme"/>
 
-            <!-- All attributes defined in app level need to exposed to overlay the AlerDialg and
+            <!-- All attributes defined in app level need to exposed to overlay the AlerDialog and
                  CellBroadcastAlertDialog layouts -->
             <item type="attr" name="preferenceFragmentCompatStyle"/>
             <item type="attr" name="switchPreferenceStyle"/>
@@ -67,13 +67,6 @@
             <item type="id" name="pictogramImage"/>
             <item type="id" name="buttonPanel"/>
             <item type="id" name="dismissButton"/>
-            <!-- additional IDs used by AlertDialog(androidx) -->
-            <item type="id" name="scrollIndicatorUp"/>
-            <item type="id" name="textSpacerNoTitle"/>
-            <item type="id" name="textSpacerNoButtons"/>
-            <item type="id" name="scrollIndicatorDown"/>
-            <item type="id" name="customPanel"/>
-            <item type="id" name="custom"/>
             <!-- END THEME / STYLE -->
 
             <!-- START DIMEN -->
