DO NOT MERGE - Disable navigation bar and quick settings for Chile
1. From SAE 4.0 section Interruptions:
When device receive the SAE message, the pop-up must still
in screen together sound and vibration until user decide stop it.
The only way to stop the pop-up, sound, and vibration (at same time)
is the option available into pop-up, I mean “Ver” or “Siguiente”,
any other option is not allowed, as home key, power button,
volume button, etc. Thus disable navigation bar and quick settings.
Note this is done through reflection and there is no guarantee the
existence or proper function of statusBarManager APIs.
TODO: push back the requirement or have proper System API support.
2. No user interaction (including pressing power key) should interrupt
the alert audio and vibration. By default vibration stops when screen
turns off. thus add a listener for screen_off event and kept playing
vibration for chile.

Bug: 172602964
Bug: 171614598
Bug: 171755310
Test: Manual test on Chilean SIM card
Change-Id: Id17fcb8582851ef46e2828a4dc0b0cd20d28988b

--- a/res/values/config.xml
+++ b/res/values/config.xml
@@ -246,4 +246,9 @@
     <!-- Whether to display a notification with pop-up dialog in the foreground.
     This is used to support emergency alert on the companion devices by bridged notification -->
     <bool name="show_alert_dialog_with_notification">false</bool>
+
+    <!-- Whether to disable status bar while alert dialog is showing.
+    Some carriers mandate this to make sure users do not switch to other activities
+    until pressing the "ok" button -->
+    <bool name="disable_status_bar">false</bool>
 </resources>
