hide "allowed alert" main toggle to avoid user confusion
Per Subtel feedback, they would like Android to remove "Allowed Alert"
at the top of the settings. Since when users turns this off, the
mandatory channels can't be turned off, thus it might cause some user
confusion.

Bug: 174678342
Test: Manual
Change-Id: I98fedbc211de18d7086aeab618f190e1c8a78c0f

--- a/res/values-mcc730/config.xml
+++ b/res/values-mcc730/config.xml
@@ -75,5 +75,6 @@
     <bool name="disable_status_bar">true</bool>
     <!-- Whether to disable the opt-out dialog for all channels -->
     <bool name="disable_opt_out_dialog">true</bool>
+    <bool name="show_main_switch_settings">false</bool>
 </resources>
 
