Add overlay to move alert dialog to bottom of screen
Bug: 172749171
Test: manual
Change-Id: I48700f7b9d321f84acf9deeab293d6ea19d6ff1c
Merged-In: I48700f7b9d321f84acf9deeab293d6ea19d6ff1c

--- a/res/values/config.xml
+++ b/res/values/config.xml
@@ -260,4 +260,8 @@
     Some carriers mandate this to make sure users do not switch to other activities
     until pressing the "ok" button -->
     <bool name="disable_status_bar">false</bool>
+
+    <!-- Whether to show the alert dialog at the bottom of the screen in order to avoid blocking
+         other content -->
+    <bool name="alert_dialog_bottom">false</bool>
 </resources>
