Add overlay to move alert dialog to bottom of screen
Bug: 172749171
Test: manual
Change-Id: I48700f7b9d321f84acf9deeab293d6ea19d6ff1c

--- a/res/values/overlayable.xml
+++ b/res/values/overlayable.xml
@@ -144,6 +144,10 @@
             <!-- Whether enable LED flash when playing alert tones -->
             <item type="bool" name="enable_led_flash" />
 
+            <!-- Whether to show the alert dialog at the bottom of the screen in order to avoid
+                 blocking other content -->
+            <item type="bool" name="alert_dialog_bottom" />
+
             <!-- Temporarily enable string customization to address translation issues. All translation issues will be fixed in S by upstreaming -->
             <!-- Dialog title for presidential level alert. [CHAR LIMIT=50] -->
             <!-- The name of the Cell Broadcast Receiver app. [CHAR LIMIT=NONE] -->
