do not enable 4398/4399 for UAE on commerical devices
only enable 4398/4399 on debugging mode.

Bug: 178053284
Test: Manual test
Change-Id: I56cd948b85d1b8ecef9ac411bae6cef3d889f633

--- a/res/values-mcc424/config.xml
+++ b/res/values-mcc424/config.xml
@@ -52,9 +52,9 @@
     <!-- 4398, 4399 -->
     <string-array name="state_local_test_alert_range_strings" translatable="false">
         <!-- state/local test -->
-        <item>0x112E:rat=gsm, type=info, emergency=true</item>
+        <item>0x112E:rat=gsm, type=info, emergency=true, testing_mode=true</item>
         <!-- state/local test additional language -->
-        <item>0x112F:rat=gsm, type=info, emergency=true</item>
+        <item>0x112F:rat=gsm, type=info, emergency=true, testing_mode=true</item>
     </string-array>
     <string-array name="cmas_amber_alerts_channels_range_strings" translatable="false">
     </string-array>
