--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -114,6 +114,7 @@
 
         <SwitchPreference android:defaultValue="true"
                           android:key="enable_alert_vibrate"
+                          android:summary="@string/enable_alert_vibrate_summary"
                           android:title="@string/enable_alert_vibrate_title" />
 
         <ListPreference android:key="alert_reminder_interval"
