--- a/res/values/overlayable.xml
+++ b/res/values/overlayable.xml
@@ -219,6 +219,7 @@
             <item type="string" name="enable_cmas_test_alerts_title"/>
             <item type="string" name="enable_cmas_test_alerts_summary"/>
             <item type="string" name="enable_alert_vibrate_title"/>
+            <item type="string" name="enable_alert_vibrate_summary"/>
             <item type="string" name="override_dnd_title"/>
             <item type="string" name="override_dnd_summary"/>
             <item type="string" name="enable_area_update_info_alerts_title"/>
