emergency alert do not interrupt active voice call
enable this feature for Canada

Bug: 173155380
Test: Build
Change-Id: I4c4b592b145e8ab4a2a5166ed31965d9d6234fa6

--- a/res/values-mcc302/config.xml
+++ b/res/values-mcc302/config.xml
@@ -48,4 +48,6 @@
         <item>500</item>
         <item>500</item>
      </integer-array>
+    <!-- Do not interrupt active voice call -->
+    <bool name="enable_alert_handling_during_call">true</bool>
 </resources>
