--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -23,14 +23,14 @@
     <!-- Preferences -->
     <style name="SettingsPreference" parent="@style/Preference.Material">
         <item name="allowDividerAbove">false</item>
-        <item name="allowDividerBelow">true</item>
+        <item name="allowDividerBelow">false</item>
         <item name="singleLineTitle">false</item>
         <item name="iconSpaceReserved">true</item>
     </style>
 
     <style name="SettingsSwitchPreference" parent="@style/Preference.SwitchPreference.Material">
         <item name="allowDividerAbove">false</item>
-        <item name="allowDividerBelow">true</item>
+        <item name="allowDividerBelow">false</item>
         <item name="iconSpaceReserved">true</item>
         <item name="singleLineTitle">false</item>
     </style>
