--- a/res/values/themes.xml
+++ b/res/values/themes.xml
@@ -28,12 +28,16 @@
 
     <style name="CellBroadcastSettingsTheme" parent="@android:style/Theme.DeviceDefault.Settings">
         <item name="switchPreferenceStyle">@style/SettingsSwitchPreference</item>
-        <item name="preferenceCategoryStyle">@style/Preference.Category.Material</item>
         <item name="preferenceStyle">@style/SettingsPreference</item>
+        <item name="preferenceTheme">@style/PreferenceTheme</item>
         <item name="dialogPreferenceStyle">@style/SettingsDialogPreference</item>
+        <item name="android:windowActionBar">false</item>
+        <item name="android:windowNoTitle">true</item>
     </style>
 
     <style name="CellBroadcastListActivityTheme" parent="@android:style/Theme.DeviceDefault.Settings">
+        <item name="android:windowActionBar">false</item>
+        <item name="android:windowNoTitle">true</item>
     </style>
 
 </resources>
