--- a/res/values-mcc302/config.xml
+++ b/res/values-mcc302/config.xml
@@ -15,6 +15,8 @@
 -->
 
 <resources>
+    <!-- Whether to show main switch settings at the top -->
+    <bool name="show_main_switch_settings">false</bool>
     <!-- Values that are active in the ListPreference.
          These must be a subset of the alert_reminder_interval_values list above. -->
     <string-array name="alert_reminder_interval_active_values" translatable="false">
